# classifier-pipeline

./: .gitignore  .travis.yml  Classifier.py  Dockerfile  INSTRUCTIONS.md  PI-README.md  README.md  RELEASE.md  Tracker.py  autobuild.sh  build.py  check-style  classifier-docker.yaml  classifier_TEMPLATE.yaml  classifierconfig_TEMPLATE.yaml  classify.py  classifyjob.py  classifyservice.py  clipsave.py  cptvfileprocessor.py  dbustest.py  dbviewer.py  displaytracks.py  docker_push.sh  dockerrun.sh  evaluate.py  extract.py  finaltest.yml  generate_images.py  generatetests.py  hints.txt  ignore.txt  ird.py  load.py  model_crnn.py  model_crnn_lq.py  model_resnet.py  modelevaluate.py  motiontest.py  newmodeltest.py  (+26 more)
.github/workflows/: release.yml
_release/: build  cacophony-classifier.service  nfpm.yaml  postinstall.sh
build_data/: buildconfig.py
classify/: classifyconfig.py  clipclassifier.py  globals.py  main.py  previewer.py  thumbnail.py  trackprediction.py
config/: buildconfig.py  classifyconfig.py  config.py  defaultconfig.py  evaluateconfig.py  loadconfig.py  locationconfig.py  motionconfig.py  test_timewindow.py  thermalconfig.py  timewindow.py  trackingconfig.py  trackingmotionconfig.py  trainconfig.py
docker/: Dockerfile  classifier-docker.yaml  latestmodel.py  ready.sh
evaluate/: evaluateconfig.py  evaluateresults.py  main.py
kalman/: kalman.py  kalmanpredictor.py  kalmanpreviewer.py  main.py
load/: clip.py  cliploader.py  cliptrackextractor.py  irtrackextractor.py  load.py  loadconfig.py
ml_tools/: buffercache.py  config.py  cptvfileprocessor.py  custommodel.py  datagenerator.py  dataset.py  datasetstructures.py  defaultconfig.py  dennismodel.py  featurenorms.py  forestmodel.py  frame.py  framecache.py  framedataset.py  hyperparams.py  imageprocessing.py  interpreter.py  irdataset.py  irwriter.py  kerasmodel.py  logs.py  model.py  mpeg_creator.py  mplogs.py  newmodel.py  preprocess.py  preprocessresnet.py  previewer.py  rawdb.py  recorddataset.py  recordwriter.py  test_rectangle.py  tfdataset.py  tfwriter.py  thermaldataset.py  thermalrecord.py  thermalwriter.py  tools.py  trackclassifier.py  trackdatabase.py  (+3 more)
ml_tools/resnet/: wr_resnet.py
mldataset/: makedataset.py  testdataset.py
piclassifier/: beacon.py  classifier.service  clipsaver.py  cptvmotiondetector.py  cptvrecorder.py  cptvtest.py  dummyrecorder.py  eventreporter.py  headerinfo.py  irmotiondetector.py  irrecorder.py  leptoncontroller.py  leptonframe.py  locationconfig.py  monitorconfig.py  motionconfig.py  motiondetector.py  piclassifier.py  piclassify.py  processor.py  recorder.py  requirements.txt  run-classifier.sh  telemetry.py  thermalconfig.py  throttledrecorder.py  trapcontroller.py
piclassifier/cameras/: boson.py  lepton3.py  rawframe.py
smoketest/: config.toml  generatetests.py  test-config.yaml  test_tracking.py  testconfig.py  tracking-tests.yml  trackingtest.py
smoketest/clips/: hedgehog.cptv  hedgehog.txt
src/: addpredictions.py  autobuild-cron  autobuild.sh  build.py  classify.py  classifyjob.py  classifyservice.py  cluster.py  dbustest.py  extract.py  label_paths.json  makedataset.py  modelevaluate.py  postprocess.py  rebuildDate.py  replicatedb.py  reprocess.py  servemodel.py  tfliteconverter.py  trackingtest.py  train.py
src/classifier/: classifyjob.py
src/classifier/config/: classifyconfig.py  config.py
src/classify/: clipclassifier.py  main.py  thumbnail.py  trackprediction.py
src/config/: buildconfig.py  classifyconfig.py  config.py  loadconfig.py  test_timewindow.py  thermalconfig.py  timewindow.py  trackingconfig.py  trackingmotionconfig.py  trainconfig.py
src/ml_tools/: cluster.py  dataset.py  datasetstructures.py  forestmodel.py  frame.py  framecache.py  globals.py  hyperparams.py  imageprocessing.py  interpreter.py  irdataset.py  irwriter.py  kerasmodel.py  logs.py  preprocess.py  preprocessresnet.py  previewer.py  rawdb.py  rectangle.py  test_rectangle.py  tfdataset.py  tfrecord_util.py  tfwriter.py  thermaldataset.py  thermalwriter.py  tools.py  trackdatabase.py
src/mldataset/: makedataset.py  testdataset.py
src/piclassifier/: __init__.py  attiny.py  beacon.py  cptvmotiondetector.py  cptvrecorder.py  cvmotiondetector.py  dbuslistener.py  dummyrecorder.py  eventreporter.py  headerinfo.py  irmotiondetector.py  irrecorder.py  monitorconfig.py  motiondetector.py  piclassifier.py  piclassify.py  postprocess.py  processor.py  recorder.py  reprocess.py  servemodel.py  service.py  telemetry.py  throttledrecorder.py  trapcontroller.py  utils.py
src/track/: clip.py  cliptracker.py  cliptrackextractor.py  framebuffer.py  irtrackextractor.py  kalman.py  region.py  track.py  tracker.py  trackextractor.py
src/train/: search.py  train.py
tests/: api.py  config.toml  generatetests.py  lepton35-missed.yml  lepton35-tracking-tests.yml  motiontest.py  test-config.yaml  test_motion.py  test_tracking_speed.py  testconfig.py  tracking-tests.yml  trackingtest.py
tests/clips/: background.cptv  hedgehog2.cptv  hedgehog2.txt  possum.cptv  possum.txt
track/: clip.py  cliptracker.py  cliptrackextractor.py  cptvtrackextractor.py  extractconfig.py  framebuffer.py  mpegpreviewstreamer.py  region.py  track.py  tracker.py  trackextractor.py  trackingconfig.py
train/: config.py  search.py  train.py
training-testclips/: currenttest.list
(+13 files in other folders)
