[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "classifier_pipeline"
version = "0.0.6"
authors = [
  { name="Giampaolo Ferraro", email="giampaolo@cacophony.org.nz" },
]
description = "Classifier Pipeline"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
# dependencies = [
#       "tensorflow-addons",
#       "tensorflow_decision_forests~=1.7.0",
#       "tensorflow~=2.14.0",
#       "matplotlib~=3.0",
#       "pytz",
#       "cptv~=1.5.4",
#       "opencv-contrib-python-headless",
#       "scipy",
#       "python-dateutil",
#       "scikit-learn",
#       "tables~=3.8.0",
#       "h5py~=3.9.0",
#       "pyyaml>=4.2b1",
#       "pillow~=10.0.1",
#       "attrs~=19.1",
#       "filelock~=3.0.12",
#       "Astral~=1.10.1",
#       "timezonefinder~=6.2.0",
#       "portalocker~=1.5.2",
#       "toml~=0.10.0",
#       "cacophonyapi",
#       "psutil~=5.6.7",
#       "dbus-python",
#       "PyGObject~=3.44.1",
#       "multiprocess",
#       "pathos",
#       "joblib",
#       "pybgs==3.2.0.post1",
#       "inotify_simple==1.3.5"]

[project.scripts]
pi_classify = "classifier:pi_classify"
hello = "classifier:hello"

[project.urls]
"Homepage" = "https://github.com/TheCacophonyProject/classifier-pipeline"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"


[tool.pytest.ini_options]
pythonpath = "src"

[tool.setuptools]
package-dir = {"" = "src"}

packages = [ "piclassifier", "config", "track"]
